# miniwdl-spawn

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: hello.wdl
miniwdl_spawn/: __init__.py  backend.py  completion.py  launch.py  sizing.py  staging.py  transfer.py
tests/: test_backend.py  test_completion.py  test_launch.py  test_sizing.py  test_staging.py  test_transfer.py
