[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniwdl-spawn"
version = "0.1.0"
description = "miniwdl container backend that runs each WDL task on an ephemeral EC2 instance via spore-host/spawn"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "scttfrdmn" }]
keywords = ["wdl", "miniwdl", "bioinformatics", "aws", "ec2", "workflow", "spawn"]
dependencies = [
    "miniwdl>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/spore-host/miniwdl-spawn"
Issues = "https://github.com/spore-host/spore-host/issues/395"

# This is what makes miniwdl discover the backend: `miniwdl run --cfg
# scheduler.container_backend=spawn` resolves this entry point. Mirrors how
# miniwdl's built-ins register (e.g. singularity = WDL.runtime.backend.singularity:SingularityContainer).
[project.entry-points."miniwdl.plugin.container_backend"]
spawn = "miniwdl_spawn.backend:SpawnContainer"

[tool.setuptools.packages.find]
include = ["miniwdl_spawn*"]

[tool.ruff]
line-length = 100
target-version = "py39"

# Runtime supports 3.9+; mypy's analysis target is 3.10 (its minimum).
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
